--- a/assets/styles.css
+++ b/assets/styles.css
@@ -6736,11 +6736,11 @@
     --color-outline-dark: var(--color-slate-700);
     --color-outline-dark-strong: var(--color-slate-300);
     --color-info: var(--color-sky-600);
-    --color-on-info: var(--color-white);
+    --color-on-info: var(--color-black);
     --color-success: var(--color-green-600);
-    --color-on-success: var(--color-white);
+    --color-on-success: var(--color-black);
     --color-warning: var(--color-amber-500);
-    --color-on-warning: var(--color-white);
+    --color-on-warning: var(--color-black);
     --color-danger: var(--color-red-600);
     --color-on-danger: var(--color-white);
     --radius-radius: var(--radius-lg);
@@ -7151,7 +7151,7 @@
     --color-primary: #00dbff;
     --color-on-primary: #002233;
     --color-secondary: #a44dff;
-    --color-on-secondary: var(--color-white);
+    --color-on-secondary: #002233;
     --color-outline: #9c9c9c;
     --color-outline-strong: #002b33;
     --color-surface-dark: #002233;
@@ -7161,7 +7161,7 @@
     --color-primary-dark: #00dbff;
     --color-on-primary-dark: #002233;
     --color-secondary-dark: #a44dff;
-    --color-on-secondary-dark: var(--color-white);
+    --color-on-secondary-dark: #002233;
     --color-outline-dark: #545454;
     --color-outline-dark-strong: #9c9c9c;
     --color-info: #00dbff;
@@ -7171,7 +7171,7 @@
     --color-warning: #ffb800;
     --color-on-warning: #002233;
     --color-danger: #ff009e;
-    --color-on-danger: var(--color-white);
+    --color-on-danger: #002233;
     --radius-radius: var(--radius-lg);
   }
   [data-theme=dracula] {
